--- a/_includes/pages/about.html
+++ b/_includes/pages/about.html
@@ -1,25 +1,25 @@
 {%- assign _ = site.data.pages.about[page.locale] -%}
 <div class="relative" data-active-snapping>
-  <div class="relative height-screen sroll-snap-start row q-lg-col">
-    <div class="width-2_3 pt-8 pb-6 col justify-center align-end q-lg-align-start q-lg-width-full pl-4">
-      <div style="max-width: calc(30rem + 25%);">
-        <div class="col sp-4 pr-6">
+  <div class="relative height-screen sroll-snap-start row q-lg-col q-lg-pt-7">
+    <div class="width-2_3 pt-8 q-lg-pt-4 pb-6 col justify-center align-end q-lg-align-start q-lg-width-full pl-4 fill-parent">
+      <div style="max-width: calc(30rem + 25%);" class="width-full">
+        <div class="col sp-4 pr-6 maxwidth-5">
           <div class="uppercase font-heading font-bold text-blue text-sm lead-line">{{_.intro_lead}}</div>
-          <h1 class="font-heading text-xxl font-normal">{{_.intro_title}}</h1>
-          <div class="markdown text-sm">{{_.intro_text | markdownify}}</div>
+          <h1 class="font-heading text-xxl font-normal q-md-text-xl">{{_.intro_title}}</h1>
+          <div class="markdown text-md q-md-text-sm">{{_.intro_text | markdownify}}</div>
         </div>
       </div>
     </div>
-    <div class="width-1_3 relative q-lg-width-full fill-parent">
+    <div class="width-1_3 relative q-lg-width-full q-lg-height-10 q-lg-first">
       {% asset {{_.intro_image}} class="absolute inset-full"%}
     </div>
-    <div class="absolute inset-x bottom-0 col align-center text-black pb-6">
+    <div class="absolute inset-x bottom-0 col align-center text-black pb-6 hide-lg">
       <a class="button-text" href="#next">{% asset icons/icon-arrow-down.svg @inline %}</a>
     </div>
   </div>
 
-  <div class="col sp-7 sroll-snap-start pt-5 pb-8" id="next">
-    <div class="height-12 relative q-lg-height-10 q-sm-height-8">
+  <div class="col sp-7 sroll-snap-start pt-7 pb-8" id="next">
+    <div class="height-12 relative q-lg-height-aspect-16-9">
       {% asset {{_.about_image}} class="absolute inset-full"%}
     </div>
     <div class="col align-center px-4">
