--- a/_includes/post-tile.html
+++ b/_includes/post-tile.html
@@ -5,7 +5,7 @@
     alt="{{post.hero_image.description}}" class="width-full" />
   </a>
   <a href="{{post.url}}" class="reset-link">
-    <h3 class="font-heading text-md">{{post.title}}</h3>
+    <h3 class="font-small-heading text-md">{{post.title}}</h3>
   </a>
   <div class="markdown text-sm">{{post.description | markdownify}}</div>
 </div>
