--- a/assets/css/_services.scss
+++ b/assets/css/_services.scss
@@ -1,22 +1,34 @@
 @import "tokens";
 
+.service-circle {
+  flex: none;
+  width: 1.25rem;
+  height: 1.25rem;
+  border-radius: 50%;
+  border: 0.15em solid;
+  background-color: blue;
+  transition-property: background-color, transform, left, top;
+  transition-duration: 0.25s, 0.25s, 0.5s, 0.5s;
+  transform: scale(0.25);
+
+  @each $key, $val in $colors {
+    &.is-#{"" + $key} {
+      border-color: $val;
+      background-color: $val;
+    }
+  }
+
+  .service-carousel-indicator.is-active &, &.is-active {
+    background-color: transparent;
+    transform: scale(1)
+  }
+}
+
+
 .service-carousel-indicator {
   .service-carousel-hidable-text {
     transition-property: opacity;
     opacity: 0
-  }
-
-  .service-circle {
-    transition-property: width, height, transform;
-    transform: translate3d(0,0,0)
-  }
-
-  &:not(.is-active) {
-    .service-circle {
-      width: 0;
-      height: 0;
-      transform: translate3d(0.4em, 0.4em, 0)
-    }
   }
 
   &.is-active {
