--- a/_includes/post-tile.html
+++ b/_includes/post-tile.html
@@ -1,11 +1,15 @@
 {%- assign post = include.post -%}
+
 <div class="col sp-3 width-1_3 q-lg-width-1_2 q-sm-width-full">
   <a href="{{post.url}}">
     <img src="{{post.hero_image.url}}?w={{400}}&h={{400 | times: 3 | divided_by: 4}}&fit=fill&f=faces"
     alt="{{post.hero_image.description}}" class="width-full" />
   </a>
   <a href="{{post.url}}" class="reset-link">
-    <h3 class="font-small-heading text-md">{{post.title}}</h3>
+    <h3 class="font-small-heading text-md">
+      <div class="category-tile">{{post.category.title}}</div>
+      {{post.title}}
+    </h3>
   </a>
   <div class="markdown text-sm">{{post.description | markdownify}}</div>
 </div>
