fix font on jobs overview site

--- a/_includes/pages/jobs.html
+++ b/_includes/pages/jobs.html
@@ -28,7 +28,7 @@
       <div class="row align-baseline sp-3 list-entry pb-2">
         <div class="">{{job.title}}</div>
         <div class="push"></div>
-        <div class="uppercase text-gray300 text-xs">{{job.location}}</div>
+        <div class="uppercase text-gray300 text-xs font-heading">{{job.location}}</div>
       </div>
     {%- endfor -%}
   </div>
