feed jobs overview from contentful data

--- a/_includes/pages/blog.html
+++ b/_includes/pages/blog.html
@@ -15,7 +15,7 @@
           {{latest_post.category.title}} |
           {{latest_post.date | date: "%d. %m. %Y"}}
         </div>
-        <a class="reset-link" href="{{latest_post.url}}"">
+        <a class="reset-link" href="{{latest_post.url}}">
           <h2 class="font-heading text-xl">{{latest_post.title}}</h2>
         </a>
         <div class="markdown">{{latest_post.description}}</div>
