--- a/_includes/pages/jobs.html
+++ b/_includes/pages/jobs.html
@@ -1,4 +1,5 @@
 {%- assign _ = site.data.pages.jobs[page.locale] -%}
+{% assign job_pages = site.pages | where: "kind", "jobPosting" | where: "locale", page.locale %}
 
 <div class="height-screen text-white relative col justify-center align-center px-4 py-5">
   <div class="absolute inset-full bg-blue" data-image-fader>
@@ -24,12 +25,12 @@
   </div>
 
   <div class="width-full maxwidth-5 col sp-2">
-    {%- for job in _.jobs -%}
-      <div class="row align-baseline sp-3 list-entry pb-2">
+    {%- for job in job_pages -%}
+      <a class="reset-link row align-baseline sp-3 list-entry pb-2" href="{{job.url}}">
         <div class="">{{job.title}}</div>
         <div class="push"></div>
         <div class="uppercase text-gray300 text-xs font-heading">{{job.location}}</div>
-      </div>
+      </a>
     {%- endfor -%}
   </div>
 
